changes the container with scrollable features, fixed max-height, and hide scrollbar button

--- a/styles/style.css
+++ b/styles/style.css
@@ -90,15 +90,16 @@ body {
   color: wheat;
 }
 .message-box {
+  overflow-x: hidden;
+  max-height: 30vh;
   background: #33add1;
   position: relative;
   width: 300px;
   max-width: 500px;
-  max-height: auto;
   color: #333;
   padding: 20px;
   margin: 20px auto;
-  border-radius: 35px;
+  border-radius: 25px;
   font-family: "Poppins";
 }
 .dark-mode .message-box {
@@ -220,4 +221,8 @@ img {
 }
 #top-button:hover {
   background-color: rgba(0, 124, 124, 0.753);
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
